--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <header>
       <h1>Tic Tac Toe</h1>
     </header>
-    <div id='app'>Hello.</div>
+    <div id='app'></div>
     <script src='./app.js'></script>
   </body>
 </html>
