Add reset button and event listener

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <h1>Tic Tac Toe</h1>
     </header>
     <div id='app'></div>
+    <button id='reset'>Reset Game</button>
     <script src='./app.js'></script>
   </body>
 </html>
