--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <header>
       <h1>Tic Tac Toe</h1>
     </header>
+    <h2 id='winner'></h2>
     <div id='app'></div>
     <button id='reset'>Reset Game</button>
     <script src='./app.js'></script>
